--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>This is Vincent Thong's Portfolio Page</h2>
-							<p>Passionate in Cloud Engineering and Devops. <a href="https://www.linkedin.com/in/vincentthongsc/">Linkedin</a></p>
+							<p> Vincent Thong is a Cloud Engineer Trainee with skills in cloud infrastructure, DevOps practices, Linux administration, and automation tools. He enjoys designing scalable, secure, and efficient cloud systems that empower businesses to thrive in fast-paced environments. 
+
+He has experience building and managing cloud solutions using Microsoft Azure. He is proficient in infrastructure-as-code tools like Terraform and Ansible. He is looking to join the cloud industry as a Cloud Engineer. <a href="https://www.linkedin.com/in/vincentthongsc/">Linkedin</a></p>
 						</div>
 					</section>
 
