--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ He has experience building and managing cloud solutions using Microsoft Azure. H
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="https://aivhealth.wixsite.com/aivhealth" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="https://aivhealth.wixsite.com/aivhealth" class="image"><img src="images/aivhealth page.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Group Project - Ecommerce Website (Work in Progress)</h2>
+										<h2 class="major">Group Project - Ecommerce Website AIVHealth</h2>
 										<p>A final project during the Cloud Engineering and Devops bootcamp. The purpose is to demonstrate building on existing knowledge of Cloud Engineering and DevOps to develop Web Application with emphasis on Back-End Architecture, and provide a sustainable Cloud Infrastructure for application maintenance </p>
 										<a href="https://aivhealth.wixsite.com/aivhealth" class="special">Learn more</a>
 									</div>
